--- a/wayfare/static/index.html
+++ b/wayfare/static/index.html
@@ -39,6 +39,7 @@
                                 <div class="mb-3">
                                     <label class="form-label">Transportation Type</label>
                                     <select class="form-select" id="transportationType">
+                                        <option value="empty">Select Type</option>
                                         <option value="car">Car</option>
                                         <option value="bicycle">Bicycle</option>
                                         <option value="walking">Walking</option>
