--- a/wayfare/static/index.html
+++ b/wayfare/static/index.html
@@ -38,7 +38,7 @@
                                 <!-- Transportation -->
                                 <div class="mb-3">
                                     <label class="form-label">Transportation Type</label>
-                                    <select class="form-select" id="transportationType">
+                                    <select class="form-select" id="transportationType" required>
                                         <option value="empty">Select Type</option>
                                         <option value="car">Car</option>
                                         <option value="bicycle">Bicycle</option>
