--- a/wayfare/static/index.html
+++ b/wayfare/static/index.html
@@ -6,6 +6,7 @@
     <title>Wayfare - Intelligent Trip Planner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/static/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -146,6 +147,9 @@
                                     <a class="nav-link" data-bs-toggle="tab" href="#stopsTab">Stops</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" data-bs-toggle="tab" href="#weatherTab">Weather</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" data-bs-toggle="tab" href="#accommodationTab">Accommodation</a>
                                 </li>
                                 <li class="nav-item">
@@ -165,6 +169,11 @@
                                 <!-- Stops Tab -->
                                 <div class="tab-pane fade" id="stopsTab">
                                     <div id="stopsDetails"></div>
+                                </div>
+
+                                <!-- Weather Tab -->
+                                <div class="tab-pane fade" id="weatherTab">
+                                    <div id="weatherDetails"></div>
                                 </div>
 
                                 <!-- Accommodation Tab -->
@@ -192,6 +201,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/static/app.js"></script>
 </body>
 </html>
