--- a/wayfare/static/index.html
+++ b/wayfare/static/index.html
@@ -92,12 +92,12 @@
                                     <h6>Motorcycle Details</h6>
                                     <div class="row g-3">
                                         <div class="col-md-6">
-                                            <label for="engineCC" class="form-label">Engine Volume (CC)</label>
+                                            <label for="engineCC" class="form-label">Engine Size (CC)</label>
                                             <input type="number" class="form-control" id="engineCC" value="125" step="1">
                                         </div>
                                         <div class="col-md-6">
                                             <label for="motorcycleFuelConsumption" class="form-label">Fuel Economy (km/L)</label>
-                                            <input type="number" class="form-control" id="motorcycleFuelConsumption" value="45" step="0.1">
+                                            <input type="number" class="form-control" id="motorcycleFuelConsumption" value="45.0" step="0.1">
                                         </div>
                                         <div class="col-md-6">
                                             <label for="motorcycleTankCapacity" class="form-label">Tank Capacity (L)</label>
@@ -107,12 +107,12 @@
                                             <label for="motorcycleInitialFuel" class="form-label">Current Fuel Level (L)</label>
                                             <input type="number" class="form-control" id="motorcycleInitialFuel" value="5.0" step="0.1" min="0">
                                         </div>
-                                        <div class="col-12">
-                                            <label for="fuelType" class="form-label">Fuel Type</label>
+                                        <div class="col-md-6">
+                                            <label for="motorcycleFuelType" class="form-label">Fuel Type</label>
                                             <select class="form-select" id="motorcycleFuelType">
-                                                <option value="92" selected>92 Regular</option>
-                                                <option value="95">95 Premium</option>
-                                                <option value="98">98 Super</option>
+                                                <option value="92">92 Octane</option>
+                                                <option value="95">95 Octane</option>
+                                                <option value="98">98 Octane</option>
                                             </select>
                                         </div>
                                     </div>
